--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,16 @@
       localStorage.setItem('Ip', Ip)
       localStorage.setItem('cityname', cityname)
     </script>
-    <script src="https://unpkg.com/vue-lazyload/vue-lazyload.js"></script>
+    <!-- element的cdn引入 -->
+    <script src="https://cdn.bootcss.com/vue/2.6.11/vue.min.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+    />
+    <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
+    <script src="https://cdn.staticfile.org/echarts/4.1.0/echarts.min.js"></script>
+    <script src="https://cdn.staticfile.org/nprogress/0.2.0/nprogress.min.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
